<resources>
    <string name="app_name">Lindungi Sesama</string>
    <string name="app_webpage">https://ezralazuardy.com/lindungisesama</string>
    <string name="title_home">Halaman Utama</string>
    <string name="title_primary_home">#lindungisesama</string>
    <string name="quote_primary_home">Bersama kita bisa melawan pandemik COVID-19</string>
    <string name="title_prevention">Pencegahan</string>
    <string name="quote_primary_prevention">Solusi untuk upaya mencegah penyebaran COVID-19</string>
    <string name="title_faq">FAQ</string>
    <string name="quote_primary_faq">Pertanyaan yang sering diajukan tentang virus COVID-19</string>
    <string name="title_about">Tentang Aplikasi</string>
    <string name="card_confirmed_title">Terkonfirmasi</string>
    <string name="card_recovery_title">Dalam Perawatan</string>
    <string name="card_recovered_title">Sembuh</string>
    <string name="card_death_title">Meninggal</string>
    <string name="title_current_cases">Jumlah Kasus di Indonesia</string>
    <string name="text_current_cases_refreshed_time">Sumber data : Kementerian Kesehatan &amp; JHU\nDiperbarui pada %1$s</string>
    <string name="text_post_timestamp">Dipublikasikan pada %1$s</string>
    <string name="text_post_creator">Oleh %1$s</string>
    <string name="text_post_item_list_number">%1$d.</string>
    <string name="text_version">versi %1$s</string>
    <string name="text_post_o_item_list_bullet">•</string>
    <string name="title_guides">Panduan</string>
    <string name="quote_primary_guides">Sebuah panduan untukmu agar dapat mencegah virus Corona</string>
    <string name="title_current_updates">Sumber Lainnya</string>
    <string name="button_read_more">Selengkapnya</string>
    <string name="button_official_web">Situs Resmi</string>
    <string name="button_yes">Ya</string>
    <string name="button_cancel">Batal</string>
    <string name="button_open_network_settings">Setelan Jaringan</string>
    <string name="button_report_error">Laporkan Masalah</string>
    <string name="title_mythbusters">Hindari Hoax</string>
    <string name="quote_primary_mythbusters">Periksa fakta, buang informasi yang salah</string>
    <string name="title_references">Sumber &amp; Referensi</string>
    <string name="title_important_links">Pranala Penting</string>
    <string name="dialog_confirm_exit_app">Anda yakin ingin keluar dari aplikasi?</string>
    <string name="title_error_handler_network_error">Koneksi Internet tidak tersedia</string>
    <string name="title_error_handler_unknown_error">Kesalahan telah terjadi</string>
    <string name="description_error_handler_network_error">Kami tidak bisa memuat data dari server dikarenakan tidak adanya jaringan internet.\n\nMohon aktifkan koneksi jaringan Wi-Fi atau data seluler anda untuk melanjutkan menggunakan aplikasi.</string>
    <string name="description_error_handler_unknown_error">Maaf, sepertinya kesalahan telah terjadi pada aplikasi yang membuat kami tidak bisa menerima data dari server. Kami akan menindaklanjuti masalah ini secepatnya.</string>
    <string name="title_current_update_1">Situasi Terkini</string>
    <string name="title_current_update_2">Berita Terbaru</string>
    <string name="title_current_update_3">Edukasi</string>
    <string name="title_current_update_4">Artikel Pilihan</string>
    <string name="title_current_update_5">Peta Persebaran COVID-19</string>
    <string name="title_current_update_6">Donasi untuk #BersamaLawanCorona</string>
    <string name="link_current_update_1">https://kawalcorona.com/</string>
    <string name="link_current_update_2">https://www.covid19.go.id/info-penting/</string>
    <string name="link_current_update_3">https://www.covid19.go.id/kampanye/</string>
    <string name="link_current_update_4">https://kawalcovid19.id/category/artikel</string>
    <string name="link_current_update_5">https://google.com/covid19-map/</string>
    <string name="link_current_update_6">https://kitabisa.com/campaign/indonesialawancorona</string>
</resources>
