<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lindungisesama.ui.main.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_prevention"
        android:name="com.lindungisesama.ui.main.fragment.preventions.PreventionFragment"
        android:label="@string/title_prevention"
        tools:layout="@layout/fragment_prevention" />

    <fragment
        android:id="@+id/navigation_faq"
        android:name="com.lindungisesama.ui.main.fragment.faq.FAQFragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.lindungisesama.ui.main.fragment.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

</navigation>
