<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_padding_half"
    android:theme="@style/AppTheme.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_padding_half"
        android:animateLayoutChanges="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:fontFamily="@font/montserrat_bold"
            android:includeFontPadding="false"
            android:text="@string/title_current_updates"
            android:textAlignment="textStart"
            android:textColor="@color/colorFontBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/button_current_update_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_arrow_forward_black" />

    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_current_update_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_padding_half"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_padding">

            <ImageButton
                android:id="@+id/icon_card_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="false"
                android:contentDescription="@null"
                android:focusable="false"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_attach_money_black" />

            <TextView
                android:id="@+id/title_card_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/title_current_update_6"
                android:textColor="@color/colorFontBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_card_6"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_padding_half"
        android:layout_marginEnd="@dimen/activity_padding_half"
        android:animateLayoutChanges="true"
        android:stretchColumns="0,1">

        <TableRow>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_current_update_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_padding_half"
                android:layout_marginBottom="@dimen/activity_padding_half"
                android:clickable="true"
                android:focusable="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_padding">

                    <ImageButton
                        android:id="@+id/icon_card_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="false"
                        android:contentDescription="@null"
                        android:focusable="false"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_show_chart_black" />

                    <TextView
                        android:id="@+id/title_card_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/montserrat"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:text="@string/title_current_update_1"
                        android:textColor="@color/colorFontBlack"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/icon_card_1"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_current_update_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_padding">

                    <ImageButton
                        android:id="@+id/icon_card_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="false"
                        android:contentDescription="@null"
                        android:focusable="false"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_announcement_black" />

                    <TextView
                        android:id="@+id/title_card_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/montserrat"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:text="@string/title_current_update_2"
                        android:textColor="@color/colorFontBlack"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/icon_card_2"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </TableRow>

        <TableRow>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_current_update_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_padding_half"
                android:layout_marginBottom="@dimen/activity_padding_half"
                android:clickable="true"
                android:focusable="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_padding">

                    <ImageButton
                        android:id="@+id/icon_card_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="false"
                        android:contentDescription="@null"
                        android:focusable="false"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_assignment_black" />

                    <TextView
                        android:id="@+id/title_card_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/montserrat"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:text="@string/title_current_update_3"
                        android:textColor="@color/colorFontBlack"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/icon_card_3"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_current_update_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_padding_half"
                android:clickable="true"
                android:focusable="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_padding">

                    <ImageButton
                        android:id="@+id/icon_card_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="false"
                        android:contentDescription="@null"
                        android:focusable="false"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_library_books_black" />

                    <TextView
                        android:id="@+id/title_card_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/montserrat"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:text="@string/title_current_update_4"
                        android:textColor="@color/colorFontBlack"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/icon_card_4"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </TableRow>

    </TableLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_current_update_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_padding_half"
        android:layout_marginEnd="@dimen/activity_padding_half"
        android:layout_marginBottom="@dimen/activity_padding_half"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_padding">

            <ImageButton
                android:id="@+id/icon_card_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="false"
                android:contentDescription="@null"
                android:focusable="false"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_map_black" />

            <TextView
                android:id="@+id/title_card_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/title_current_update_5"
                android:textColor="@color/colorFontBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_card_5"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>